5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4371/executions/1596_2895.log
== SUBMITION (2019-04-01 21:45:34) 
-- CODE:
quantidade= 2
valor= 45 
frete= 10
-- EXECUTION TIME:
0.146498
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:

-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:

-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 21:45:53) 
-- CODE:
quantidade= 2
valor= 45 
frete= 10
print(total)
-- EXECUTION TIME:
0.210288
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2895/main.py", line 4, in <module>
    print(total)
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:45:59) 
-- CODE:
quantidade= 2
valor= 45 
frete= 10
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(total)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:57:20) 
-- CODE:
input(quantidade)= 2
input(valor)= 45 
input(frete)= 10
print(total)
-- ERROR:
File "XXXX", line 1
    input(quantidade)= 2
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 21:57:24) 
-- CODE:
input(quantidade)= 2
input(valor)= 45 
input(frete)= 10
print(total)
-- EXECUTION TIME:
0.218844
-- ERROR:
  File "/home/codebench/codes/1596/2895/main.py", line 1
    input(quantidade)= 2
    ^
SyntaxError: can't assign to function call

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 21:58:00) 
-- CODE:
var =input(quantidade)= 2
var =input(valor)= 45 
var =input(frete)= 10
print(total)
-- EXECUTION TIME:
0.206512
-- ERROR:
  File "/home/codebench/codes/1596/2895/main.py", line 1
    var =input(quantidade)= 2
        ^
SyntaxError: can't assign to function call

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:58:03) 
-- CODE:
var =input(quantidade)= 2
var =input(valor)= 45 
var =input(frete)= 10
print(total)
-- ERROR:
File "XXXX", line 1
    var =input(quantidade)= 2
        ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 22:02:16) 
-- CODE:
quant = 2
print("quant:", quant)
val uni = 45
print("val uni:", val uni)
frete = 10
print("frete:", frete)
-- EXECUTION TIME:
0.145923
-- ERROR:
  File "/home/codebench/codes/1596/2895/main.py", line 3
    val uni = 45
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:02:19) 
-- CODE:
quant = 2
print("quant:", quant)
val uni = 45
print("val uni:", val uni)
frete = 10
print("frete:", frete)
-- ERROR:
File "XXXX", line 3
    val uni = 45
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 22:02:31) 
-- CODE:
quant = 2
print("quant:", quant)
valor = 45
print("val uni:", val uni)
frete = 10
print("frete:", frete)
-- EXECUTION TIME:
0.21233
-- ERROR:
  File "/home/codebench/codes/1596/2895/main.py", line 4
    print("val uni:", val uni)
                            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:02:42) 
-- CODE:
quant = 2
print("quant:", quant)
valor = 45
print("val uni:", val uni)
frete = 10
print("frete:", frete)
-- ERROR:
File "XXXX", line 4
    print("val uni:", val uni)
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:02:58) 
-- CODE:
quant = 2
print("quant:", quant)
valor = 45
print("valor:", val uni)
frete = 10
print("frete:", frete)
-- ERROR:
File "XXXX", line 4
    print("valor:", val uni)
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 22:03:03) 
-- CODE:
quant = 2
print("quant:", quant)
valor = 45
print("valor:", val uni)
frete = 10
print("frete:", frete)
-- EXECUTION TIME:
0.0977349
-- ERROR:
  File "/home/codebench/codes/1596/2895/main.py", line 4
    print("valor:", val uni)
                          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:03:10) 
-- CODE:
quant = 2
print("quant:", quant)
valor = 45
print("valor:", valor)
frete = 10
print("frete:", frete)
-- OUTPUT:
quant: 2
valor: 45
frete: 10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:03:14) 
-- CODE:
quant = 2
print("quant:", quant)
valor = 45
print("valor:", valor)
frete = 10
print("frete:", frete)
-- OUTPUT:
quant: 2
valor: 45
frete: 10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 22:03:20) 
-- CODE:
quant = 2
print("quant:", quant)
valor = 45
print("valor:", valor)
frete = 10
print("frete:", frete)
-- EXECUTION TIME:
0.224403
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
quant: 2
valor: 45
frete: 10
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
quant: 2
valor: 45
frete: 10
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
quant: 2
valor: 45
frete: 10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:03:22) 
-- CODE:
quant = 2
print("quant:", quant)
valor = 45
print("valor:", valor)
frete = 10
print("frete:", frete)
-- OUTPUT:
quant: 2
valor: 45
frete: 10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 22:03:41) 
-- CODE:
quantidade = 2
print("quantidade:", quantidade)
valor = 45
print("valor:", valor)
frete = 10
print("frete:", frete)
-- EXECUTION TIME:
0.191057
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
quantidade: 2
valor: 45
frete: 10
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
quantidade: 2
valor: 45
frete: 10
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
quantidade: 2
valor: 45
frete: 10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:03:44) 
-- CODE:
quantidade = 2
print("quantidade:", quantidade)
valor = 45
print("valor:", valor)
frete = 10
print("frete:", frete)
-- OUTPUT:
quantidade: 2
valor: 45
frete: 10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 22:04:29) 
-- CODE:
input quantidade = 2
print("quantidade:", quantidade)
valor = 45
print("valor:", valor)
frete = 10
print("frete:", frete)
-- EXECUTION TIME:
0.181643
-- ERROR:
  File "/home/codebench/codes/1596/2895/main.py", line 1
    input quantidade = 2
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:04:31) 
-- CODE:
input quantidade = 2
print("quantidade:", quantidade)
valor = 45
print("valor:", valor)
frete = 10
print("frete:", frete)
-- ERROR:
File "XXXX", line 1
    input quantidade = 2
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:04:42) 
-- CODE:
quantidade = 2
print("quantidade:", quantidade)
valor = 45
print("valor:", valor)
frete = 10
print("frete:", frete)
-- OUTPUT:
quantidade: 2
valor: 45
frete: 10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:04:53) 
-- CODE:
quantidade = 20
print("quantidade:", quantidade)
valor = 45
print("valor:", valor)
frete = 10
print("frete:", frete)
-- OUTPUT:
quantidade: 20
valor: 45
frete: 10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:08:41) 
-- CODE:
quantidade = input("20")
print("quantidade:", quantidade)
valor = input("45")
print("valor:", valor)
frete = input("10")
print("frete:", frete)
-- OUTPUT:
quantidade: 12
valor: 45.0
frete: 78.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 22:08:50) 
-- CODE:
quantidade = input("20")
print("quantidade:", quantidade)
valor = input("45")
print("valor:", valor)
frete = input("10")
print("frete:", frete)
-- EXECUTION TIME:
0.134194
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
quantidade: 12
valor: 45.0
frete: 78.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
quantidade: 10
valor: 67.0
frete: 95.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
quantidade: 246
valor: 975.0
frete: 321.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:09:01) 
-- CODE:
quantidade = input("20")
print("quantidade:", quantidade)
valor = input("45")
print("valor:", valor)
frete = input("10")
print("frete:", frete)
-- OUTPUT:
quantidade: 12
valor: 45.0
frete: 78.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:11:45) 
-- CODE:
quantide = input ("10")
print("10", quantidade)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("10", quantidade)
NameError: name 'quantidade' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:12:44) 
-- CODE:
quantide = input ("10")
print("10", quantidade)
valor = input ("45")
print("45", valor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("10", quantidade)
NameError: name 'quantidade' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:14:14) 
-- CODE:
quantide = input ("10")
print("10", quantidade)
valor = input ("45")
print("45", valor)
frete = input ("10")
print("10"), frete
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("10", quantidade)
NameError: name 'quantidade' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 22:14:18) 
-- CODE:
quantide = input ("10")
print("10", quantidade)
valor = input ("45")
print("45", valor)
frete = input ("10")
print("10"), frete
-- EXECUTION TIME:
0.198575
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2895/main.py", line 2, in <module>
    print("10", quantidade)
NameError: name 'quantidade' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:14:54) 
-- CODE:
quantide = input ("10: ")
print("10", quantidade)
valor = input ("45: ")
print("45", valor)
frete = input ("10: ")
print("10"), frete
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("10", quantidade)
NameError: name 'quantidade' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:21:18) 
-- CODE:
quantidade = float(input("2"))
valor = 10
frete = 20
total = valor * 2 + frete 
print(total)
-- OUTPUT:
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 22:21:22) 
-- CODE:
quantidade = float(input("2"))
valor = 10
frete = 20
total = valor * 2 + frete 
print(total)
-- EXECUTION TIME:
0.158372
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
40
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
40
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
40
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 22:21:58) 
-- CODE:
quantidade = float(input("2"))
valor = 10
frete = 20
total = valor * quantidade + frete 
print(total)
-- EXECUTION TIME:
0.191802
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
140.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
120.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
2480.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:22:00) 
-- CODE:
quantidade = float(input("2"))
valor = 10
frete = 20
total = valor * quantidade + frete 
print(total)
-- OUTPUT:
140.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:23:09) 
-- CODE:
quantidade = float(input("2"))
valor = float(input("10"))
frete = float(input("20"))
total = valor * quantidade + frete 
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:23:48) 
-- CODE:
quantidade = float(input("2: "))
valor = float(input("10: "))
frete = float(input("20: "))
total = valor * quantidade + frete 
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 01:15:45) 
-- CODE:
valor_do_jogo = float(input("qual o valor unitario do jogo? "))

valor_do_frete = 45 

total = valor_do_jogo * 8 + valor_do_frete

print(total)
-- EXECUTION TIME:
0.157102
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
141.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
125.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
2013.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:15:57) 
-- CODE:
valor_do_jogo = float(input("qual o valor unitario do jogo? "))

valor_do_frete = 45 

total = valor_do_jogo * 8 + valor_do_frete

print(total)
-- OUTPUT:
141.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 01:16:05) 
-- CODE:
valor_do_jogo = float(input("qual o valor unitario do jogo? "))

valor_do_frete = 45 

total = valor_do_jogo * 8 + valor_do_frete

print(total)
-- EXECUTION TIME:
0.132856
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
141.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
125.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
2013.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:16:22) 
-- CODE:
valor_do_jogo = float(input("Qual o valor unitario do jogo? "))

valor_do_frete = 45 

total = valor_do_jogo * 8 + valor_do_frete

print(total)
-- OUTPUT:
141.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 01:16:26) 
-- CODE:
valor_do_jogo = float(input("Qual o valor unitario do jogo? "))

valor_do_frete = 45 

total = valor_do_jogo * 8 + valor_do_frete

print(total)
-- EXECUTION TIME:
0.212379
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
141.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
125.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
2013.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:17:01) 
-- CODE:
valor_do_jogo = float(input("Qual o valor unitario do jogo? "))

valor_do_frete = 45 

total = valor_do_jogo * 8 + valor_do_frete

print(total)
-- OUTPUT:
141.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 01:17:10) 
-- CODE:
valor_do_jogo = float(input("Qual o valor unitario do jogo? "))

valor_do_frete = 45 

total = valor_do_jogo * 8 + valor_do_frete

print(total)
-- EXECUTION TIME:
0.188078
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
141.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
125.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
2013.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:19:56) 
-- CODE:
q=float(input("quan?"))
valor=float(input"valor_do_jogo?")
tr=float(input("frete"))
total+ q * valor + tr
print(total)
-- ERROR:
File "XXXX", line 2
    valor=float(input"valor_do_jogo?")
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 01:20:07) 
-- CODE:
q=float(input("quan?"))
valor=float(input"valor_do_jogo?")
tr=float(input("frete"))
total+ q * valor + tr
print(total)
-- EXECUTION TIME:
0.146489
-- ERROR:
  File "/home/codebench/codes/1596/2895/main.py", line 2
    valor=float(input"valor_do_jogo?")
                                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:20:39) 
-- CODE:
q=float(input("quan?"))
valor=float(input"valor_do_jogo?")
tr=float(input("frete"))
total+ q * valor + tr
print(total)
-- ERROR:
File "XXXX", line 2
    valor=float(input"valor_do_jogo?")
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:21:13) 
-- CODE:
q=float(input("quan?"))
valor=float(input("valor_do_jogo?"))
tr=float(input("frete"))
total+ q * valor + tr
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total+ q * valor + tr
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 01:21:19) 
-- CODE:
q=float(input("quan?"))
valor=float(input("valor_do_jogo?"))
tr=float(input("frete"))
total+ q * valor + tr
print(total)
-- EXECUTION TIME:
0.165383
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2895/main.py", line 4, in <module>
    total+ q * valor + tr
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:21:41) 
-- CODE:
q=float(input("quan?"))
valor=float(input("valor_do_jogo?"))
tr=float(input("frete"))
total+ q * valor + tr
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total+ q * valor + tr
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 01:22:52) 
-- CODE:
q=float(input("quan?"))
valor=float(input("valor_do_jogo?"))
tr=float(input("frete"))
total+ q * valor + tr
print(total)
-- EXECUTION TIME:
0.174408
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2895/main.py", line 4, in <module>
    total+ q * valor + tr
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 02:21:55) 
-- CODE:
q=float(input("quan?"))
valor=float(input("valor_do_jogo?"))
tr=float(input("frete"))
total+ q * valor + tr
print(total)
-- EXECUTION TIME:
0.126338
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2895/main.py", line 4, in <module>
    total+ q * valor + tr
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 02:22:02) 
-- CODE:
q=float(input("quan?"))
valor=float(input("valor_do_jogo?"))
tr=float(input("frete"))
total+ q * valor + tr
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total+ q * valor + tr
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:13:17) 
-- CODE:
q=float(input("quan?"))
valor=float(input("valor_do_jogo?"))
tr=float(input("frete"))
total+ q * valor + tr
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total+ q * valor + tr
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:13:25) 
-- CODE:
q=float(input("quan?"))
valor=float(input("valor_do_jogo?"))
tr=float(input("frete"))
total+ q * valor + tr
print(total)
-- EXECUTION TIME:
0.279884
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2895/main.py", line 4, in <module>
    total+ q * valor + tr
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:13:48) 
-- CODE:
q=float(input("quan?"))

valor=float(input("valor_do_jogo?"))
tr=float(input("frete"))
total+ q * valor + tr
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total+ q * valor + tr
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:14:00) 
-- CODE:
q=float(input("quan?"))
valor=float(input("valor_do_jogo?"))
tr=float(input("frete"))
total + q * valor + tr
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total + q * valor + tr
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:14:03) 
-- CODE:
q=float(input("quan?"))
valor=float(input("valor_do_jogo?"))
tr=float(input("frete"))
total + q * valor + tr
print(total)
-- EXECUTION TIME:
0.151259
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2895/main.py", line 4, in <module>
    total + q * valor + tr
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:15:14) 
-- CODE:
q=float(input("quan?"))
valor=float(input("valor_do_jogo?"))
tr=float(input("frete"))
total = q * valor + tr
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:15:17) 
-- CODE:
q=float(input("quan?"))
valor=float(input("valor_do_jogo?"))
tr=float(input("frete"))
total = q * valor + tr
print(total)
-- EXECUTION TIME:
0.152676
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
